<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tiga.beli.subsidi.SubsidiKKSActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/c_white"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black"
                    android:text="@string/note_status"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_black"
                    android:textStyle="bold"
                    android:text=" TERDAFTAR"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img_kks"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:src="@drawable/kks"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/img_kks"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/c_black"
                        android:text="@string/dummy_kks1_name"/>
                </RelativeLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/field_noid"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.1"
                        android:text=":"/>
                    <TextView
                        android:id="@+id/kks_ktp"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/field_name"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.1"
                        android:text=":"/>
                    <TextView
                        android:id="@+id/kks_name"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/field_addrs"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_black"
                        android:layout_weight="0.1"
                        android:text=":"/>
                    <TextView
                        android:id="@+id/kks_address"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_black"
                android:padding="5dp"
                android:text="@string/note_pembelian"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_p_item"
                android:background="@color/c_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>
            <Button
                android:id="@+id/btn_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_bayar"
                android:theme="@style/Button.Red"
                android:padding="16dp"
                android:textColor="@color/c_white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
