<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tiga.beli.subsidi.SubsidiTrResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/c_white"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/note_trx_success"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:padding="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="Tanggal"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:layout_weight="0.1"/>
                    <TextView
                        android:id="@+id/trx_date"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ly_kksno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:padding="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/note_nomor_kks"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:layout_weight="0.1"/>
                    <TextView
                        android:id="@+id/trx_kksno"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ly_kksname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:padding="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="Name"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:layout_weight="0.1"/>
                    <TextView
                        android:id="@+id/trx_name"
                        android:layout_width="0dp"
                        android:textColor="@color/c_black"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/note_pembelian"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:background="@color/c_grey_2"
                android:layout_height="200dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/c_white"
                    android:text="TOTAL"/>
                <TextView
                    android:id="@+id/total_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/c_white"
                    android:layout_weight="0.3"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
